Elastic archç created

--- a/ElasticProject/appsettings.Development.json
+++ b/ElasticProject/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Elastich;SearchServer": {
+    "Host": "http://localhost",
+    "Port": 9200,
+    "Username": "",
+    "Password": ""
   }
 }
