--- a/ElasticData/ElasticData.csproj
+++ b/ElasticData/ElasticData.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entity\" />
-    <Folder Include="SErvice\" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+    <PackageReference Include="NEST" Version="7.17.5" />
   </ItemGroup>
 
 </Project>
